[package]
name = "kvs"
version = "0.1.0"
authors = ["YuhanLiin <linyuhan0315@hotmail.com>"]
edition = "2018"
description = "A key-value store"

[dependencies]
structopt = "0.2.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.10.1"
ron = "*"
bson = "0.13"
failure = "0.1.5"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
criterion = "0.2.11"
rand = "0.6.5"
